cabal-version:      3.0
name:               hqlite
version:            0.1.0.0

-- synopsis:

-- description:

license:            BSD-3-Clause
license-file:       LICENSE
author:             dylan h
maintainer:         baolong281@gmail.com
category:           Database
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
      HqLite
        HqLite.Paging
          HqLite.Paging.Page
        HqLite.Table
        HqLite.Constants
            
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base ^>=4.17.2.1
      , binary
      , text
      , bytestring
      , containers
      , mtl
    hs-source-dirs:   src
    default-language: Haskell2010

executable hqlite
    import:           warnings

    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        hqlite,

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: Haskell2010

test-suite hqlite-test
    -- Import common warning flags.
    import:           warnings

    -- Base language which the package is written in.
    default-language: Haskell2010

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0

    -- Directories containing source files.
    hs-source-dirs:   test

    -- The entrypoint to the test suite.
    main-is:          Main.hs

    -- Test dependencies.
    build-depends:
        base ^>=4.17.2.1,
        hqlite
