cabal-version:      3.0
name:               hqlite
version:            0.1.0.0

-- synopsis:

-- description:

license:            BSD-3-Clause
license-file:       LICENSE
author:             dylan h
maintainer:         baolong281@gmail.com
category:           Database
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
      HqLite
        HqLite.Paging
          HqLite.Paging.Page
          HqLite.Paging.Cache
          HqLite.Paging.Types
        HqLite.Table
          HqLite.Table.Types
        HqLite.Constants
        HqLite.Commands
        HqLite.Btree
          HqLite.Btree.Types
        HqLite.Utils
    -- other-modules:
    -- other-extensions:
    default-extensions:
        RecordWildCards
    build-depends:    
        base ^>=4.17.2.1
      , binary
      , text
      , bytestring
      , containers
      , mtl
      , unordered-containers
      , monad-loops
      , vector
      , vector-algorithms
    hs-source-dirs:   src
    default-language: Haskell2010

executable hqlite
    import:           warnings

    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        hqlite,

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: Haskell2010

test-suite hqlite-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:
        HqLiteSpec
    build-depends:
        , base ^>=4.17.2.1
        , hspec-discover
        , hqlite
        , temporary
        , silently
        , hspec
        , mtl
        , directory
        , raw-strings-qq
    build-tool-depends:
      hspec-discover:hspec-discover
